--- a/src/app/rules/RuleAdd.css
+++ b/src/app/rules/RuleAdd.css
@@ -1,7 +1,7 @@
-div {
-    margin: 10px;
-    padding: 10px
-}
+/*div {*/
+/*    margin: 10px;*/
+/*    padding: 10px*/
+/*}*/
 
 .group {
     border: 2px solid black;
