--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
     text-align: center;
+    margin: 10px;
+    padding: 10px;
 }
 
 .App-logo {
@@ -45,4 +47,8 @@
     margin: 0 10px;
     border-radius: 0px;
     cursor: pointer;
+}
+
+.space {
+    height: 20px;
 }
