--- a/src/component/Modal.css
+++ b/src/component/Modal.css
@@ -15,6 +15,8 @@
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    max-height: calc(100vh - 200px);
+    overflow-y: auto;
 }
 
 .modal-close {
